# This-is-public-because-I-need-CI-bots-please-ignore

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: Linux_Build.yml  MacOS_Build.yml
include/: cart.hpp  dma.hpp  joypad.hpp  math_engine.hpp  memory.hpp  save_file.hpp  scheduler.hpp  snes.hpp  utils.hpp
include/APU/: spc700.hpp  timers.hpp
include/CPU/: cpu.hpp
include/GUI/: gui.hpp
include/PPU/: ppu.hpp
resources/: snes_db.json
src/: cart.cpp  carts.cpp  dma.cpp  externals.cpp  main.cpp  memory.cpp  snes.cpp
src/APU/: spc700.cpp  spc700_addressing.inl  spc700_instructions.inl  spc700_memory.cpp
src/CPU/: addressing_modes.inl  alu.inl  branches.inl  cpu.cpp  interrupts.inl  loads_stores.inl  misc.inl
src/CPU/dynarec/: dynarec.cpp  memory_management.cpp
src/GUI/: gui.cpp  threading.cpp
src/PPU/: ppu.cpp
tools/: scrape_db.py
